--- a/example/pageforge.yaml
+++ b/example/pageforge.yaml
@@ -6,8 +6,11 @@ assets_path: assets
 site:
   title: PageForge
   description: PageForge 是一款现代化的静态页面生成与部署平台，旨在帮助用户快速创建精美的静态网站，并一键部署到 GitHub Pages。 无论是个人博客、项目文档还是企业官网，PageForge 都能让你轻松实现高效构建、智能部署和即时上线。
+  logo: /assets/logo.svg
 
-# 导航配置
+cdn:
+  style: https://cdn.tailwindcss.com
+
 nav:
   - url: /
     text: 首页
