--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "chokidar": "^3.5.3",
     "ejs": "^3.1.10",
+    "esbuild": "^0.24.2",
     "express": "^4.18.2",
     "gray-matter": "^4.0.3",
     "js-yaml": "^4.1.0",
