添加顶部左侧展示 repo 相关信息

--- a/example/pageforge.yaml
+++ b/example/pageforge.yaml
@@ -15,6 +15,11 @@ theme:
 cdn:
   style: https://cdn.tailwindcss.com
 
+repo:
+  owner: devlive-community
+  name: pageforge
+  url: https://github.com/devlive-community/pageforge
+
 nav:
   - link: /
     text: 首页
