--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.2",
     "gray-matter": "^4.0.3",
     "js-yaml": "^4.1.0",
-    "marked": "^15.0.4"
+    "marked": "^15.0.4",
+    "mkdirp": "^3.0.1"
   }
 }
