--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cli"
   ],
   "dependencies": {
+    "chalk": "4.1.2",
     "chokidar": "^3.5.3",
     "ejs": "^3.1.10",
     "esbuild": "^0.24.2",
