--- a/docs/pageforge.yaml
+++ b/docs/pageforge.yaml
@@ -32,4 +32,4 @@ sidebar:
     - text: 快速上手
       link: '/docs/get-started'
     - text: 创建你的网站
-      link: '/docs/create-site'
+      link: '/docs/create-site/index'
