--- a/docs/pageforge.yaml
+++ b/docs/pageforge.yaml
@@ -30,6 +30,6 @@ nav:
 sidebar:
   default:
     - text: 快速上手
-      link: '/docs/get-started'
+      link: /docs/get-started
     - text: 创建你的网站
-      link: '/docs/create-site/index'
+      link: /docs/create-site/index
