--- a/docs/pageforge.yaml
+++ b/docs/pageforge.yaml
@@ -1,8 +1,3 @@
-source_path: content
-output_path: dist
-template_path: templates  # 可选，不创建也能工作
-assets_path: assets
-
 site:
   title:
   description: PageForge 是一款现代化的静态页面生成与部署平台，旨在帮助用户快速创建精美的静态网站，并一键部署到 GitHub Pages。 无论是个人博客、项目文档还是企业官网，PageForge 都能让你轻松实现高效构建、智能部署和即时上线。
@@ -22,14 +17,8 @@ repo:
   url: https://github.com/devlive-community/pageforge
 
 nav:
-  - text: 首页
-    link: /
-  - text: 文档
-    link: /docs/index
-
-sidebar:
-  default:
-    - text: 快速上手
-      link: /docs/get-started
-    - text: 创建你的网站
-      link: /docs/create-site/index
+  - 快速开始:
+      - /docs/get-started
+      - /docs/create-site/index
+      - /docs/publish-site
+      - /docs/customization
