重做底部模版

--- a/docs/pageforge.yaml
+++ b/docs/pageforge.yaml
@@ -5,6 +5,35 @@ site:
   logo: /assets/logo.svg
   favicon: /assets/logo.svg
 
+footer:
+  copyright: © 2024 PageForge All Rights Reserved. 使用 ❤️ PageForge 构建
+  social:
+    github:
+      title: GitHub
+      href: https://github.com/devlive-community/pageforge
+  links:
+    - 资源项目:
+        - title: Node.js
+          href: https://nodejs.org
+        - title: PageForge
+          href: https://github.com/devlive-community/pageforge
+        - title: TailwindCSS
+          href: https://tailwindcss.com
+    - 社区资源:
+        - title: GitHub
+          href: https://github.com/devlive-community/pageforge/discussions
+        - title: Discord
+          href: https://discord.gg/pageforge
+        - title: Community
+          href: https://community.devlive.org
+    - 开源项目:
+        - title: Node.js
+          href: https://github.com/nodejs/node
+        - title: PageForge
+          href: https://github.com/devlive-community/pageforge
+        - title: TailwindCSS
+          href: https://github.com/tailwindlabs/tailwindcss
+
 theme:
   extra_css:
     - /assets/extra.css
