--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "marked": "^15.0.4",
     "mkdirp": "^3.0.1",
     "pinyin": "4.0.0-alpha.2"
+  },
+  "devDependencies": {
+    "vm2": "^3.9.19"
   }
 }
